add sonarqube support in pom.xml refactor code according to code smell